FIX: adds visibility when reaction picker is expanded

--- a/assets/stylesheets/common/discourse-reactions.scss
+++ b/assets/stylesheets/common/discourse-reactions.scss
@@ -123,6 +123,7 @@ html.discourse-reactions-no-select {
     animation: 0.33s fadeIn;
     animation-fill-mode: forwards;
     display: flex;
+    visibility: visible;
   }
 
   .container {
